code/HADAD-base/src/main/java/hadad/base/compiler/model/aj/AQLParser.java
// Generated from AQL.g4 by ANTLR 4.7.2

package hadad.base.compiler.model.aj;

import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class AQLParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17, T__17 = 18,
            NAME = 19, BETA = 20, WS = 21, STRING = 22;
    public static final int RULE_aqlquery = 0, RULE_viewName = 1, RULE_query = 2, RULE_rootFieldName = 3,
            RULE_returnClause = 4, RULE_recordConstruct = 5, RULE_fieldBinding = 6, RULE_recordConstructFieldName = 7,
            RULE_fieldName = 8, RULE_fieldValue = 9, RULE_returnVar = 10, RULE_name = 11, RULE_returnConstant = 12,
            RULE_returnQuery = 13, RULE_term = 14, RULE_termVar = 15, RULE_termConstant = 16, RULE_termPath = 17,
            RULE_constant = 18, RULE_number = 19, RULE_path = 20, RULE_pathVar = 21, RULE_var = 22, RULE_step = 23,
            RULE_objectStep = 24, RULE_arrayStep = 25, RULE_key = 26, RULE_index = 27, RULE_forClause = 28,
            RULE_binding = 29, RULE_forClauseBindingVar = 30, RULE_forClauseBindingSource = 31, RULE_source = 32,
            RULE_dataSetName = 33, RULE_whereClause = 34, RULE_condition = 35, RULE_whereCondSome = 36,
            RULE_whereCondBinding = 37, RULE_whereCondBindingVar = 38, RULE_whereCondBindingSource = 39,
            RULE_whereCondEquality = 40, RULE_whereCondEqualityLeftTerm = 41, RULE_whereCondEqualityRightTerm = 42,
            RULE_cterm = 43, RULE_forWhereClauses = 44;

    private static String[] makeRuleNames() {
        return new String[] { "aqlquery", "viewName", "query", "rootFieldName", "returnClause", "recordConstruct",
                "fieldBinding", "recordConstructFieldName", "fieldName", "fieldValue", "returnVar", "name",
                "returnConstant", "returnQuery", "term", "termVar", "termConstant", "termPath", "constant", "number",
                "path", "pathVar", "var", "step", "objectStep", "arrayStep", "key", "index", "forClause", "binding",
                "forClauseBindingVar", "forClauseBindingSource", "source", "dataSetName", "whereClause", "condition",
                "whereCondSome", "whereCondBinding", "whereCondBindingVar", "whereCondBindingSource",
                "whereCondEquality", "whereCondEqualityLeftTerm", "whereCondEqualityRightTerm", "cterm",
                "forWhereClauses" };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] { null, "'='", "'{'", "':'", "'}'", "'return'", "','", "'.'", "'['", "']'", "'for'", "'in'",
                "'dataset'", "'where'", "'and'", "'some'", "'satisfies'", "'('", "')'" };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] { null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, "NAME", "BETA", "WS", "STRING" };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "AQL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public AQLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class AqlqueryContext extends ParserRuleContext {
        public ViewNameContext viewName() {
            return getRuleContext(ViewNameContext.class, 0);
        }

        public QueryContext query() {
            return getRuleContext(QueryContext.class, 0);
        }

        public RootFieldNameContext rootFieldName() {
            return getRuleContext(RootFieldNameContext.class, 0);
        }

        public AqlqueryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_aqlquery;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterAqlquery(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitAqlquery(this);
        }
    }

    public final AqlqueryContext aqlquery() throws RecognitionException {
        AqlqueryContext _localctx = new AqlqueryContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_aqlquery);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(90);
                viewName();
                setState(91);
                match(T__0);
                setState(99);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__9: {
                        setState(92);
                        query();
                    }
                        break;
                    case T__1: {
                        setState(93);
                        match(T__1);
                        setState(94);
                        rootFieldName();
                        setState(95);
                        match(T__2);
                        setState(96);
                        query();
                        setState(97);
                        match(T__3);
                    }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ViewNameContext extends ParserRuleContext {
        public TerminalNode NAME() {
            return getToken(AQLParser.NAME, 0);
        }

        public ViewNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_viewName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterViewName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitViewName(this);
        }
    }

    public final ViewNameContext viewName() throws RecognitionException {
        ViewNameContext _localctx = new ViewNameContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_viewName);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(101);
                match(NAME);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class QueryContext extends ParserRuleContext {
        public ForWhereClausesContext forWhereClauses() {
            return getRuleContext(ForWhereClausesContext.class, 0);
        }

        public ReturnClauseContext returnClause() {
            return getRuleContext(ReturnClauseContext.class, 0);
        }

        public QueryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_query;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterQuery(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitQuery(this);
        }
    }

    public final QueryContext query() throws RecognitionException {
        QueryContext _localctx = new QueryContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_query);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(103);
                forWhereClauses();
                setState(104);
                returnClause();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RootFieldNameContext extends ParserRuleContext {
        public FieldNameContext fieldName() {
            return getRuleContext(FieldNameContext.class, 0);
        }

        public RootFieldNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_rootFieldName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterRootFieldName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitRootFieldName(this);
        }
    }

    public final RootFieldNameContext rootFieldName() throws RecognitionException {
        RootFieldNameContext _localctx = new RootFieldNameContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_rootFieldName);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                fieldName();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ReturnClauseContext extends ParserRuleContext {
        public RecordConstructContext recordConstruct() {
            return getRuleContext(RecordConstructContext.class, 0);
        }

        public ReturnVarContext returnVar() {
            return getRuleContext(ReturnVarContext.class, 0);
        }

        public ReturnConstantContext returnConstant() {
            return getRuleContext(ReturnConstantContext.class, 0);
        }

        public ReturnClauseContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_returnClause;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterReturnClause(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitReturnClause(this);
        }
    }

    public final ReturnClauseContext returnClause() throws RecognitionException {
        ReturnClauseContext _localctx = new ReturnClauseContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_returnClause);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(108);
                match(T__4);
                setState(112);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case T__1: {
                        setState(109);
                        recordConstruct();
                    }
                        break;
                    case NAME: {
                        setState(110);
                        returnVar();
                    }
                        break;
                    case BETA:
                    case STRING: {
                        setState(111);
                        returnConstant();
                    }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RecordConstructContext extends ParserRuleContext {
        public List<FieldBindingContext> fieldBinding() {
            return getRuleContexts(FieldBindingContext.class);
        }

        public FieldBindingContext fieldBinding(int i) {
            return getRuleContext(FieldBindingContext.class, i);
        }

        public RecordConstructContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_recordConstruct;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterRecordConstruct(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitRecordConstruct(this);
        }
    }

    public final RecordConstructContext recordConstruct() throws RecognitionException {
        RecordConstructContext _localctx = new RecordConstructContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_recordConstruct);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(114);
                match(T__1);
                setState(115);
                fieldBinding();
                setState(120);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__5) {
                    {
                        {
                            setState(116);
                            match(T__5);
                            setState(117);
                            fieldBinding();
                        }
                    }
                    setState(122);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(123);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FieldBindingContext extends ParserRuleContext {
        public RecordConstructFieldNameContext recordConstructFieldName() {
            return getRuleContext(RecordConstructFieldNameContext.class, 0);
        }

        public FieldValueContext fieldValue() {
            return getRuleContext(FieldValueContext.class, 0);
        }

        public FieldBindingContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fieldBinding;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterFieldBinding(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitFieldBinding(this);
        }
    }

    public final FieldBindingContext fieldBinding() throws RecognitionException {
        FieldBindingContext _localctx = new FieldBindingContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_fieldBinding);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(125);
                recordConstructFieldName();
                setState(126);
                match(T__2);
                setState(127);
                fieldValue();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class RecordConstructFieldNameContext extends ParserRuleContext {
        public FieldNameContext fieldName() {
            return getRuleContext(FieldNameContext.class, 0);
        }

        public RecordConstructFieldNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_recordConstructFieldName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterRecordConstructFieldName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitRecordConstructFieldName(this);
        }
    }

    public final RecordConstructFieldNameContext recordConstructFieldName() throws RecognitionException {
        RecordConstructFieldNameContext _localctx = new RecordConstructFieldNameContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_recordConstructFieldName);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(129);
                fieldName();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FieldNameContext extends ParserRuleContext {
        public TerminalNode STRING() {
            return getToken(AQLParser.STRING, 0);
        }

        public FieldNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fieldName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterFieldName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitFieldName(this);
        }
    }

    public final FieldNameContext fieldName() throws RecognitionException {
        FieldNameContext _localctx = new FieldNameContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_fieldName);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FieldValueContext extends ParserRuleContext {
        public RecordConstructContext recordConstruct() {
            return getRuleContext(RecordConstructContext.class, 0);
        }

        public ReturnVarContext returnVar() {
            return getRuleContext(ReturnVarContext.class, 0);
        }

        public ReturnConstantContext returnConstant() {
            return getRuleContext(ReturnConstantContext.class, 0);
        }

        public ReturnQueryContext returnQuery() {
            return getRuleContext(ReturnQueryContext.class, 0);
        }

        public FieldValueContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fieldValue;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterFieldValue(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitFieldValue(this);
        }
    }

    public final FieldValueContext fieldValue() throws RecognitionException {
        FieldValueContext _localctx = new FieldValueContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_fieldValue);
        try {
            setState(137);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__1:
                    enterOuterAlt(_localctx, 1); {
                    setState(133);
                    recordConstruct();
                }
                    break;
                case NAME:
                    enterOuterAlt(_localctx, 2); {
                    setState(134);
                    returnVar();
                }
                    break;
                case BETA:
                case STRING:
                    enterOuterAlt(_localctx, 3); {
                    setState(135);
                    returnConstant();
                }
                    break;
                case T__9:
                    enterOuterAlt(_localctx, 4); {
                    setState(136);
                    returnQuery();
                }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ReturnVarContext extends ParserRuleContext {
        public VarContext var() {
            return getRuleContext(VarContext.class, 0);
        }

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public TerminalNode NAME() {
            return getToken(AQLParser.NAME, 0);
        }

        public ReturnVarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_returnVar;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterReturnVar(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitReturnVar(this);
        }
    }

    public final ReturnVarContext returnVar() throws RecognitionException {
        ReturnVarContext _localctx = new ReturnVarContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_returnVar);
        try {
            setState(144);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1); {
                    setState(139);
                    var();
                }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2); {
                    setState(140);
                    name();
                    setState(141);
                    match(T__6);
                    setState(142);
                    match(NAME);
                }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class NameContext extends ParserRuleContext {
        public TerminalNode NAME() {
            return getToken(AQLParser.NAME, 0);
        }

        public NameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitName(this);
        }
    }

    public final NameContext name() throws RecognitionException {
        NameContext _localctx = new NameContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(146);
                match(NAME);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ReturnConstantContext extends ParserRuleContext {
        public ConstantContext constant() {
            return getRuleContext(ConstantContext.class, 0);
        }

        public ReturnConstantContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_returnConstant;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterReturnConstant(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitReturnConstant(this);
        }
    }

    public final ReturnConstantContext returnConstant() throws RecognitionException {
        ReturnConstantContext _localctx = new ReturnConstantContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_returnConstant);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(148);
                constant();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ReturnQueryContext extends ParserRuleContext {
        public QueryContext query() {
            return getRuleContext(QueryContext.class, 0);
        }

        public ReturnQueryContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_returnQuery;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterReturnQuery(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitReturnQuery(this);
        }
    }

    public final ReturnQueryContext returnQuery() throws RecognitionException {
        ReturnQueryContext _localctx = new ReturnQueryContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_returnQuery);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(150);
                query();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TermContext extends ParserRuleContext {
        public TermConstantContext termConstant() {
            return getRuleContext(TermConstantContext.class, 0);
        }

        public TermVarContext termVar() {
            return getRuleContext(TermVarContext.class, 0);
        }

        public TermPathContext termPath() {
            return getRuleContext(TermPathContext.class, 0);
        }

        public TermContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_term;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterTerm(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitTerm(this);
        }
    }

    public final TermContext term() throws RecognitionException {
        TermContext _localctx = new TermContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_term);
        try {
            setState(155);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1); {
                    setState(152);
                    termConstant();
                }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2); {
                    setState(153);
                    termVar();
                }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3); {
                    setState(154);
                    termPath();
                }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TermVarContext extends ParserRuleContext {
        public VarContext var() {
            return getRuleContext(VarContext.class, 0);
        }

        public NameContext name() {
            return getRuleContext(NameContext.class, 0);
        }

        public TerminalNode NAME() {
            return getToken(AQLParser.NAME, 0);
        }

        public TermVarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_termVar;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterTermVar(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitTermVar(this);
        }
    }

    public final TermVarContext termVar() throws RecognitionException {
        TermVarContext _localctx = new TermVarContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_termVar);
        try {
            setState(162);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1); {
                    setState(157);
                    var();
                }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2); {
                    setState(158);
                    name();
                    setState(159);
                    match(T__6);
                    setState(160);
                    match(NAME);
                }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TermConstantContext extends ParserRuleContext {
        public ConstantContext constant() {
            return getRuleContext(ConstantContext.class, 0);
        }

        public TermConstantContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_termConstant;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterTermConstant(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitTermConstant(this);
        }
    }

    public final TermConstantContext termConstant() throws RecognitionException {
        TermConstantContext _localctx = new TermConstantContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_termConstant);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(164);
                constant();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TermPathContext extends ParserRuleContext {
        public PathContext path() {
            return getRuleContext(PathContext.class, 0);
        }

        public TermPathContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_termPath;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).enterTermPath(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AQLListener)
                ((AQLListener) listener).exitTermPath(this);
        }
    }

    public final TermPathContext termPath() throws RecognitionException {
        TermPathContext _localctx = new TermPathContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_termPath);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(166);
                path();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
